# BGWiS-Opencv-2.x-

./: CMakeLists.txt  README.md  cdwisard.cpp  cdwisard.hpp
CDwizlib/: bgwis.cpp  bgwis.hpp
